<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card"
    android:clickable="false">

    <ImageView
        android:id="@+id/list_item_recipe_verified_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/verification_indicator"
        android:src="@drawable/ic_verified" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/margin_large">

            <TextView
                android:id="@+id/list_item_recipe_name"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="Roboto, Arial, Sans Serif"
                android:singleLine="true"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/list_item_recipe_gluten_free_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/gluten_free_indicator"
                android:src="@drawable/ic_gluten_free" />

            <ImageView
                android:id="@+id/list_item_recipe_vegetarian_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/vegetarian_indicator"
                android:src="@drawable/ic_vegetarian" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_item_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:fontFamily="Roboto, Arial, Sans Serif"
            android:singleLine="true"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</RelativeLayout>