<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_ingredient_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:baselineAligned="false"
    android:divider="@drawable/horizontal_divider"
    android:orientation="horizontal"
    android:padding="@dimen/margin_regular"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/list_item_ingredient_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type_nutritional_group"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_item_ingredient_container_amount"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_ingredient_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/zero_integer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/list_item_ingredient_amount_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/unit_of_measurement"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</LinearLayout>