<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lighter">

    <ProgressBar
        android:id="@+id/fragment_recipe_info_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:id="@+id/fragment_recipe_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_recipe_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/card_regular"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_large"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:paddingTop="@dimen/margin_small">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextBox.Green"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_regular"
                        android:padding="@dimen/margin_regular"
                        android:text="@string/recipe"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/fragment_recipe_info_user_rating_bar"
                        style="@style/RatingBar.Small.Dark"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/margin_regular"
                        android:numStars="5"
                        android:rating="2.5"
                        android:stepSize="0.5" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_recipe_info_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_regular"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/fragment_recipe_info_gluten_free_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/gluten_free_indicator"
                        android:src="@drawable/ic_gluten_free" />

                    <ImageView
                        android:id="@+id/fragment_recipe_info_vegetarian_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="@dimen/margin_regular"
                        android:contentDescription="@string/vegetarian_indicator"
                        android:src="@drawable/ic_vegetarian" />
                </LinearLayout>

                <TextView
                    android:id="@+id/fragment_recipe_info_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_regular"
                    android:minHeight="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/time_of_cook"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/difficulty"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/presentation"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fragment_recipe_info_cook_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|bottom"
                            android:text="@string/dummy_integer"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|bottom"
                            android:text="@string/minutes"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/fragment_recipe_info_difficulty"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/difficulty_2"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/fragment_recipe_info_serve_hot"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/serve_cold"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_recipe_info_ingredients_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/card_regular"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBox.Orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:padding="@dimen/margin_regular"
                    android:text="@string/ingredients"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/fragment_recipe_info_ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_regular" />

                <TextView
                    android:id="@+id/fragment_recipe_info_pax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="@dimen/margin_regular"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_recipe_info_elaboration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/card_regular"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBox.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:padding="@dimen/margin_regular"
                    android:text="@string/elaboration"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/fragment_recipe_info_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_regular" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>